--- a/alt-bot-service/.gitignore
+++ b/alt-bot-service/.gitignore
@@ -134,10 +134,10 @@ venv.bak/
 
 # Rope project settings
 .ropeproject
-
+.idea/
 # mkdocs documentation
 /site
-
+data/
 # mypy
 .mypy_cache/
 .dmypy.json
