--- a/alt-bot-service/requirements.txt
+++ b/alt-bot-service/requirements.txt
@@ -1,5 +1,7 @@
 fastapi~=0.85.0
 uvicorn
-python-binance
 pydantic~=1.10.2
-mysql-connector-python
+mysql-connector-python~=8.0.30
+certifi==2022.9.24
+requests~=2.28.1
+numpy~=1.23.3
